--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -241,7 +241,6 @@
     }
     .casino-left, .casino-right {
         width: 100%;
-        padding: 0 10px;
     }
     .casino-left {
         height: 320px;
@@ -292,7 +291,7 @@
         margin-bottom: 0px;
     }
     .casino-right {
-        padding: 15px !important;
+        padding: 15px 0 !important;
     }
     .casino-card .hotel-img {
         height: 220px;
