--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -253,6 +253,10 @@
     .casino-right {
         padding: 20px !important;
     }
+    .hotel-wrap .explore-btn {
+        left: 15px;
+        bottom: 15px;
+    }
 }
 @media(max-width:767px){
     .site-footer .col-lg-3:last-child
