--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,5 +1,76 @@
 
-
+@media(min-width:1600px){
+    .banner-txt h1 {
+        font-size: 80px;
+    }
+    .banner-txt p {
+        font-size: 22px;
+    }
+    .sub-banner .banner-wrap .banner-txt h2 {
+        font-size: 50px;
+    }
+    .wel-come-right p {
+        font-size: 20px;
+    }
+    nav ul li a {
+        font-size: 22px;
+    }
+    .site-logo img {
+        width: 250px;
+    }
+    .nav-bar ul li a {
+        font-size: 20px;
+    }
+    .hotel-txt h3 {
+        font-size: 30px;
+    }
+    .hotel-txt p {
+        font-size: 20px;
+    }
+    .explore-btn a {
+        font-size: 18px;
+    }
+    .conclusion-wrap p {
+        font-size: 20px;
+    }
+    .footer-heading h3 {
+        font-size: 30px;
+    }
+    .footer-links ul li a {
+        font-size: 20px;
+    }
+    .social-links ul li a {
+        height: 50px;
+        width: 50px;
+    }
+    .hotel-img {
+        height: 300px;
+    }
+    .sub-banner {
+        height: 500px;
+    }
+    .casino-right p {
+        font-size: 20px;
+    }
+    .site-heading h3 {
+        font-size: 40px;
+    }
+    .contact-wrap h4 {
+        font-size: 30px;
+    }
+    .contact-wrap p {
+        font-size: 20px;
+    }
+    .form-group input, .form-group textarea {
+        height: 50px;
+    }
+    .form-group textarea {
+        height: 250px;
+    }
+    .contact-form button {
+        padding: 12px 20px;
+    }
+}
 @media(max-width:1400px){
     .casino-wrap{
         height: 500px;
