--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,7 +402,17 @@ width: 100%;
     font-size: 16px;
     margin-bottom: 10px;
 }
-
+.copy-right {
+padding-top: 20px;
+margin-top: 20px;
+border-top: 1px solid #eee;
+text-align: center;
+}
+.copy-right p{
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 0;
+}
 /* .casino-card .hotel-wrap{
     height: 100%;
 }
